[package]
name = "yuca-cli"
description = "Demo CLI for yuca (access USB Type-C device information on Linux)"
readme = "README.md"
version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "yuca"
path = "src/main.rs"

[dependencies]
bpaf = { version = "0.9.15", features = ["derive", "bright-color"] }
camino = "1.1.9"
futures-lite = "2.5.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
tokio = { workspace = true, features = ["sync"] }
usb-ids = "1.2024.5"
yuca = { version = "0.1.0", path = "../yuca" }
